src/test/deca/syntax/invalid/renduInter01/00missing_if.deca
// Description:
//      Programme lexicalement incorrect
//      => une instruction conditionnelle if...else_if doit débuter par une branche if
//
// Resultats:
//      Erreur syntaxique
//      Ligne 11 : token 'else' inattendu

{
    int x = 4;
    else if (x == 3) {
        println("hello else_if1 : ", x);
    } else if (x == 4) {
        println("hello else_if2 : ", x);
    }

}
